--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -14,9 +14,9 @@ logging:
 #微信相关配置
 wx:
   #appId （到时候换成自己公众号的）
-  appId: wx4ad618620f8c3528
+  appId: wx0aeda4b3497c6a17
   #appSecret（到时候换成自己公众号的）
-  appSecret: b772c7863b29e270aa86e40f9b9e6215
+  appSecret: 2a4913bfb0ed0cc47646d00680a5312d
   #参考以下文档获取access_token（有效期7200秒，开发者必须在自己的服务全局缓存access_token）
   jssdk_accesstoken_url: https://api.weixin.qq.com/cgi-bin/token?grant_type=client_credential&appid=APPID&secret=APPSECRET
   #用第一步拿到的access_token 采用http GET方式请求获得jsapi_ticket（有效期7200秒，开发者必须在自己的服务全局缓存jsapi_ticket）
